<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_role_selection"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artist"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_collector"
        android:title="@string/title_collectors" />
</menu> 